fix(Design): Fix Overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,6 @@ html {
   background-position: top center;
   background-size: auto 400px;
   font-size: 16px;
-  overflow-x: hidden;
   color: #28004b;
   font-weight: 400;
   line-height: 1.5;
@@ -99,12 +98,31 @@ html {
 /****** Containers ******/
 /************************/
 
-.content {
+.top-section {
+  width: 100%;
+  height: auto;
+  z-index: 1;
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 110px;
   position: relative;
+  padding: 24px;
+  overflow: hidden;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 110px;
+  position: relative;
+  padding: 24px;
 }
 @media only screen and (min-width: 500px) {
   .content {
-    margin: 0 25px;
+    margin: 0 24px;
   }
 }
 
