--- a/src/components/Common/Header/header.css
+++ b/src/components/Common/Header/header.css
@@ -1,13 +1,3 @@
-.top-section {
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  max-width: 1200px;
-  margin: 0 auto;
-  min-height: 110px;
-  position: relative;
-}
-
 .top-section-gradient {
   position: absolute;
   width: 200vw;
@@ -59,9 +49,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 30px;
   position: relative;
-  padding: 40px 15px;
+  padding: 40px 0;
   min-height: 60px;
 }
 
